--- a/index.html
+++ b/index.html
@@ -12,39 +12,39 @@
 </head>
 <body>
 
-    <h3>Compartilhe seu #rocketcard</h3>
-
     <main>
         <div class="card">
+            <h3>Compartilhe seu #rocketcard</h3>
+
             <div class="card-content">
-                <p>
+                <div class="name-user">
                     <img src="./assets/logo.svg" alt="Logomarca">
                     <span>Sulaalbuquerque</span>
-                </p>
+                </div>
 
-                <img 
+                <img class="img-user"
                     src="https://avatars.githubusercontent.com/u/77463176?v=4" 
                     alt="Imagem do usuário"
                 >
 
                 <div class="datas">
-                    <span>
+                    <span class="data">
                         <img src="./assets//followers.svg">
-                        <span>Followers</span>
+                        <span>Srguidores</span>
                     </span>
-                    <span>
+                    <span class="data">
                         <img src="./assets/following.svg">
-                        <span>Following</span>
+                        <span>Seguindo</span>
                     </span>
-                    <span>
+                    <span class="data">
                         <img src="./assets/repository.svg">
-                        <span>Repository</span>
+                        <span>Repositórios</span>
                     </span>
-                    <span>
+                    <span class="data">
                         <img src="./assets/company.svg">
                         <span>Company</span>
                     </span>
-                    <span>
+                    <span class="data">
                         <img src="./assets/location.svg">
                         <span>Location</span>
                     </span>
