--- a/index.html
+++ b/index.html
@@ -22,32 +22,38 @@
                     <span>Sulaalbuquerque</span>
                 </div>
 
-                <img class="img-user"
-                    src="https://avatars.githubusercontent.com/u/77463176?v=4" 
-                    alt="Imagem do usuário"
-                >
+                <div class="main">
+                    <div class="user">
+                        <img class="img-user"
+                            src="https://avatars.githubusercontent.com/u/77463176?v=4" 
+                            alt="Imagem do usuário"
+                        >
+                    </div>
 
-                <div class="datas">
-                    <span class="data">
-                        <img src="./assets//followers.svg">
-                        <span>Srguidores</span>
-                    </span>
-                    <span class="data">
-                        <img src="./assets/following.svg">
-                        <span>Seguindo</span>
-                    </span>
-                    <span class="data">
-                        <img src="./assets/repository.svg">
-                        <span>Repositórios</span>
-                    </span>
-                    <span class="data">
-                        <img src="./assets/company.svg">
-                        <span>Company</span>
-                    </span>
-                    <span class="data">
-                        <img src="./assets/location.svg">
-                        <span>Location</span>
-                    </span>
+                    <div class="datas">
+                        <ul>
+                            <li class="data">
+                                <img src="./assets//followers.svg">
+                                <span>Srguidores</span>
+                            </li>
+                            <li class="data">
+                                <img src="./assets/following.svg">
+                                <span>Seguindo</span>
+                            </li>
+                            <li class="data">
+                                <img src="./assets/repository.svg">
+                                <span>Repositórios</span>
+                            </li>
+                            <li class="data">
+                                <img src="./assets/company.svg">
+                                <span>Company</span>
+                            </li>
+                            <li class="data">
+                                <img src="./assets/location.svg">
+                                <span>Location</span>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
 
                 <div class="footer">
@@ -61,6 +67,7 @@
             <div class="data-user">
                 <label for="">Digite o seu </label>
                 <input 
+                    autofocus
                     type="text" 
                     placeholder="nome de usuário"
                 >
@@ -68,7 +75,7 @@
             </div>
 
             <div class="customization">
-                <p>Customzar Rocketcard</p>
+                <p>Customizar Rocketcard</p>
                 <button>Gerar background</button>
             </div>
         </div>
