button change background card

--- a/index.html
+++ b/index.html
@@ -67,7 +67,6 @@
             <div class="data-user">
                 <label for="">Digite o seu </label>
                 <input 
-                    autofocus
                     type="text" 
                     placeholder="nome de usuário"
                 >
@@ -76,7 +75,15 @@
 
             <div class="customization">
                 <p>Customizar Rocketcard</p>
-                <button>Gerar background</button>
+                <!-- <button>Gerar background</button> -->
+                <div class="colors">
+                    <button class="color purple"></button>
+                    <button class="color pink"></button>
+                    <button class="color blue"></button>
+                    <button class="color green"></button>
+                    <button class="color black"></button>
+                </div>
+
             </div>
         </div>
     </main>
