--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <h3>Compartilhe seu #rocketcard</h3>
 
             <div class="card-content">
-                <div class="name-user">
+                <div class="name-user-container">
                     <img src="./assets/logo.svg" alt="Logomarca">
-                    <span>Sulaalbuquerque</span>
+                    <span class="name-user">Sulaalbuquerque</span>
                 </div>
 
                 <div class="main">
@@ -32,23 +32,23 @@
 
                     <div class="datas">
                         <ul>
-                            <li class="data">
+                            <li class="data followers">
                                 <img src="./assets//followers.svg">
-                                <span>Srguidores</span>
+                                <span>Seguidores</span>
                             </li>
-                            <li class="data">
+                            <li class="data following">
                                 <img src="./assets/following.svg">
                                 <span>Seguindo</span>
                             </li>
-                            <li class="data">
+                            <li class="data repository">
                                 <img src="./assets/repository.svg">
                                 <span>Repositórios</span>
                             </li>
-                            <li class="data">
+                            <li class="data company">
                                 <img src="./assets/company.svg">
                                 <span>Company</span>
                             </li>
-                            <li class="data">
+                            <li class="data location">
                                 <img src="./assets/location.svg">
                                 <span>Location</span>
                             </li>
@@ -67,21 +67,21 @@
             <div class="data-user">
                 <label for="">Digite o seu </label>
                 <input 
+                    class="input"
                     type="text" 
                     placeholder="nome de usuário"
                 >
-                <button>Gerar meu card</button>
+                <button class="button-card">Gerar meu card</button>
             </div>
 
             <div class="customization">
                 <p>Customizar Rocketcard</p>
-                <!-- <button>Gerar background</button> -->
                 <div class="colors">
-                    <button class="color purple"></button>
-                    <button class="color pink"></button>
-                    <button class="color blue"></button>
-                    <button class="color green"></button>
-                    <button class="color black"></button>
+                    <button class="purple"></button>
+                    <button class="pink"></button>
+                    <button class="blue"></button>
+                    <button class="green"></button>
+                    <button class="black"></button>
                 </div>
 
             </div>
