--- a/index.html
+++ b/index.html
@@ -85,6 +85,11 @@
                 </div>
 
             </div>
+
+            <div class="download">
+                <p>Baixar meu card</p>
+                <button>Download pdf</button>
+            </div>
         </div>
     </main>
 
