--- a/index.html
+++ b/index.html
@@ -71,7 +71,13 @@
                     type="text" 
                     placeholder="nome de usuário"
                 >
-                <button type="submit" class="button-card">Gerar meu card</button>
+                <button 
+                    disabled
+                    type="submit" 
+                    class="button-card"
+                >
+                    Gerar meu card
+                </button>
             </div>
 
             <div class="customization">
@@ -85,6 +91,7 @@
                         <button class="green"></button>
                         <button class="original"></button>
                     </div>
+                    
                 </div>
                 <div class="color-text">
                     <p>Cor do texto</p>
