--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <div class="popup">
         <div class="content-popup">
             <p>Nome de usuário não encontrado.</p>
-            <p>Por favor, insira um nome de usuário válido.</p>
+            <p>Insira um nome de usuário válido.</p>
             <button class="button-popup">Ok</button>
         </div>
     </div>
