update style datas

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <main>
             <div class="card">
                 
-                <div id="my-card" class="card-content">
+                <div class="card-content">
                     <div class="name-user-container">
                         <img src="./assets/logo.svg" alt="Logomarca">
                         <span class="name-user">Sulaalbuquerque</span>
@@ -33,25 +33,25 @@
 
                         <div class="datas">
                             <ul>
-                                <li class="data followers">
+                                <li class="data">
                                     <img src="./assets//followers.svg">
-                                    <span>Seguidores</span>
+                                    <span class="followers">Followers</span>
                                 </li>
-                                <li class="data following">
+                                <li class="data">
                                     <img src="./assets/following.svg">
-                                    <span>Seguindo</span>
+                                    <span class="following">Following</span>
                                 </li>
-                                <li class="data repository">
+                                <li class="data">
                                     <img src="./assets/repository.svg">
-                                    <span>Repositórios</span>
+                                    <span class="repository">Repository</span>
                                 </li>
-                                <li class="data company">
+                                <li class="data">
                                     <img src="./assets/company.svg">
-                                    <span>Company</span>
+                                    <span class="company">Company</span>
                                 </li>
-                                <li class="data location">
+                                <li class="data">
                                     <img src="./assets/location.svg">
-                                    <span>Location</span>
+                                    <span class="location">Location</span>
                                 </li>
                             </ul>
                         </div>
