--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rocketcard</title>
-    <link rel="icon" href="./assets/repository.svg"/>
+    <link rel="icon" href="./assets/icons/repository.svg"/>
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,14 +20,14 @@
                 
                 <div class="card-content">
                     <div class="name-user-container">
-                        <img src="./assets/logo.svg" alt="Logomarca">
-                        <span class="name-user">Sulaalbuquerque</span>
+                        <img src="./assets/icons/logo.svg" alt="Logomarca">
+                        <span class="name-user">nameUser</span>
                     </div>
 
                     <div class="main">
                         <div class="user">
                             <img class="img-user"
-                                src="https://avatars.githubusercontent.com/u/77463176?v=4" 
+                                src="./assets//imgs/avatar.webp" 
                                 alt="Imagem do usuário"
                             >
                         </div>
@@ -35,23 +35,23 @@
                         <div class="datas">
                             <ul>
                                 <li class="data">
-                                    <img src="./assets//followers.svg">
+                                    <img src="./assets/icons/followers.svg">
                                     <span class="followers">Followers</span>
                                 </li>
                                 <li class="data">
-                                    <img src="./assets/following.svg">
+                                    <img src="./assets/icons/following.svg">
                                     <span class="following">Following</span>
                                 </li>
                                 <li class="data">
-                                    <img src="./assets/repository.svg">
+                                    <img src="./assets/icons/repository.svg">
                                     <span class="repository">Repository</span>
                                 </li>
                                 <li class="data">
-                                    <img src="./assets/company.svg">
+                                    <img src="./assets/icons/company.svg">
                                     <span class="company">Company</span>
                                 </li>
                                 <li class="data">
-                                    <img src="./assets/location.svg">
+                                    <img src="./assets/icons/location.svg">
                                     <span class="location">Location</span>
                                 </li>
                             </ul>
@@ -59,7 +59,7 @@
                     </div>
 
                     <div class="footer">
-                        <img src="./assets/logo.svg" alt="Logomarca">
+                        <img src="./assets/icons/logo.svg" alt="Logomarca">
                         <span>ROCKETCARD</span>
                     </div>
                 </div>
